--- a/compatible-clients.yaml
+++ b/compatible-clients.yaml
@@ -4,6 +4,8 @@ rules:
       - ethereum
     blacklist:
       - v2.40.0
+
+incompatible-version-rules:
   - client: erigon
     networks:
       - polygon
