--- a/chains.yaml
+++ b/chains.yaml
@@ -1949,6 +1949,12 @@ chain-settings:
           grpcId: 10104
           short-names: [lens-testnet]
           chain-id: 0x90f7
+        - id: Mainnet
+          priority: 100
+          code: LENS_MAINNET
+          grpcId: 1102
+          short-names: [lens, lens-mainnet]
+          chain-id: 0xe8
     - id: unichain
       label: Unichain
       type: eth
